--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
     </header>
 
-    <main class="main">
-    </main>
+    <!-- <main class="main">
+    </main> -->
 </body>
 
 </html>
